# thumbnailer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_docker_image.py  pyproject.toml  requirements.docker.txt  video_thumbnail.py
src/thumbnailer/: __init__.py  __main__.py  thumbnail.py  video.py
src/video_thumbnail/: __init__.py  __main__.py
