[project]
name = "video-thumbnail"
version = "0.1.0"
description = "Generate thumbnail of video"
authors = [
    { name = "潭渊", email = "CNife@vip.qq.com" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "rich>=13.7.1",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/video_thumbnail"]
