[project]
name = "video-thumbnail"
version = "0.1.0"
description = "Generate thumbnail of video"
authors = [
    { name = "潭渊", email = "CNife@vip.qq.com" }
]
dependencies = [
    "opencv-python>=4.9.0.80",
    "rich>=13.7.1",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython",
    "viztracer[full]",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/video_thumbnail"]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP", # pyupgrade
]

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.ruff.lint.isort]
known-local-folder = ["video_thumbnail"]
split-on-trailing-comma = false
